--- a/src/app/components/nuevo-pedido/nuevo-pedido.component.html
+++ b/src/app/components/nuevo-pedido/nuevo-pedido.component.html
@@ -82,7 +82,7 @@
         
                         <ng-container matColumnDef="PRODUCTO">
                           <th mat-header-cell *matHeaderCellDef> PRODUCTO </th>
-                          <td mat-cell *matCellDef="let element"> {{element.producto}} </td>
+                          <td mat-cell *matCellDef="let element"> {{element.det_pedido}} </td>
                         </ng-container>
         
                         <ng-container matColumnDef="CANTIDAD">
