--- a/src/app/components/pedido/pedido.component.html
+++ b/src/app/components/pedido/pedido.component.html
@@ -40,27 +40,43 @@
               <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
                 <!-- Position Column -->
-                <ng-container matColumnDef="position">
-                  <th mat-header-cell *matHeaderCellDef> No. </th>
-                  <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+                <ng-container matColumnDef="CODIGO">
+                  <th mat-header-cell *matHeaderCellDef> CODIGO </th>
+                  <td mat-cell *matCellDef="let element"> {{element.id}} </td>
                 </ng-container>
 
                 <!-- Name Column -->
-                <ng-container matColumnDef="name">
-                  <th mat-header-cell *matHeaderCellDef> Name </th>
-                  <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                <ng-container matColumnDef="FECHA_ENTREGA">
+                  <th mat-header-cell *matHeaderCellDef> FECHA DE ENTREGA </th>
+                  <td mat-cell *matCellDef="let element"> {{element.fecha_entrega | date:"dd/MM/yyyy"}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="CLIENTE">
+                  <th mat-header-cell *matHeaderCellDef> CLIENTE </th>
+                  <td mat-cell *matCellDef="let element"> {{element.cliente.cliente}} </td>
                 </ng-container>
 
                 <!-- Weight Column -->
-                <ng-container matColumnDef="weight">
-                  <th mat-header-cell *matHeaderCellDef> Weight </th>
-                  <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+                <ng-container matColumnDef="ANTICIPO">
+                  <th mat-header-cell *matHeaderCellDef> ANTICIPO </th>
+                  <td mat-cell *matCellDef="let element"> {{element.anticipo}} </td>
                 </ng-container>
 
                 <!-- Symbol Column -->
-                <ng-container matColumnDef="symbol">
-                  <th mat-header-cell *matHeaderCellDef> Symbol </th>
-                  <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+                <ng-container matColumnDef="OPCIONES">
+                  <th mat-header-cell *matHeaderCellDef class="text-success"> OPCIONES </th>
+                  <td mat-cell *matCellDef="let row" class="td-actions">
+                    <div style="display:flex">
+                      <button mat-raised-button type="button" class="btn btn-primary btn-link" (click)="detPedido(row)"> 
+                        <i class="material-icons">list</i>
+                    </button>                          <!-- <button mat-button type="button" matTooltip="Quitar denunciante" [matTooltipPosition]="'left'"
+                        class="btn btn-danger" (click)="QuitarContacto(row)">
+                        <i class="material-icons">
+                          delete
+                          </i>
+                      </button> -->
+                    </div>
+                  </td>
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
