--- a/src/app/components/pedido/pedido.component.html
+++ b/src/app/components/pedido/pedido.component.html
@@ -69,7 +69,11 @@
                     <div style="display:flex">
                       <button mat-raised-button type="button" class="btn btn-primary btn-link" (click)="detPedido(row)"> 
                         <i class="material-icons">list</i>
-                    </button>                          <!-- <button mat-button type="button" matTooltip="Quitar denunciante" [matTooltipPosition]="'left'"
+                    </button>
+                    <button mat-raised-button type="button" class="btn btn-primary btn-link" (click)="getPDF(row)"> 
+                      <i class="material-icons">picture_as_pdf</i>
+                  </button>    
+                    <!-- <button mat-button type="button" matTooltip="Quitar denunciante" [matTooltipPosition]="'left'"
                         class="btn btn-danger" (click)="QuitarContacto(row)">
                         <i class="material-icons">
                           delete
