--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -124,7 +124,7 @@
                 <li class="nav-item">
                     <a href="http://md-pro-angular.creative-tim.com/documentation/tutorial?ref=md-pro-archive" class="nav-link">
                         <i class="material-icons">school</i>
-                        <p>Documentation</p>
+                        <p>Manual de Usuario</p>
                     </a>
                 </li>
             </ul>
