--- a/src/app/components/pedido-produccion/pedido-produccion.component.html
+++ b/src/app/components/pedido-produccion/pedido-produccion.component.html
@@ -15,11 +15,11 @@
           </div>
           <div class="col-md-2">
               <!--<div class="card-header">-->
-                  <a mat-button routerLink="/components/nuevo-pedido">
+                <!--<a mat-button routerLink="/components/nuevo-pedido">
                       <i class="material-icons">
                           add_circle
                           </i> Agregar
-                  </a>   
+                  </a> -->  
                      <!--</div>-->
           </div>
         </div>
@@ -51,31 +51,18 @@
                   <td mat-cell *matCellDef="let element"> <small>{{element.fecha_entrega}} - {{element.hora_entrega}}</small></td>
                 </ng-container>
 
-                <ng-container matColumnDef="CLIENTE">
-                  <th mat-header-cell *matHeaderCellDef> CLIENTE Y TELEFONO</th>
-                  <td mat-cell *matCellDef="let element"><small>{{element.nombre_cliente}} - {{element.cliente.telefono}}</small></td>
+                <!-- Name Column -->
+                <ng-container matColumnDef="DETALLE">
+                  <th mat-header-cell *matHeaderCellDef> DETALLE DEL PEDIDO </th>
+                  <td mat-cell *matCellDef="let element"> <small>{{element.detalle}}</small></td>
                 </ng-container>
 
-                <!-- Weight Column -->
-                <ng-container matColumnDef="TOTAL">
-                  <th mat-header-cell *matHeaderCellDef> TOTAL PEDIDO</th>
-                  <td mat-cell *matCellDef="let element"> <small>{{element.total_pedido| currency: "Q." : fractionsize}}</small></td>
+                                <!-- Name Column -->
+                <ng-container matColumnDef="OBSERVACIONES">
+                  <th mat-header-cell *matHeaderCellDef> OBSERVACIONES DEL PEDIDO </th>
+                  <td mat-cell *matCellDef="let element"> <small>{{element.observaciones}}</small></td>
                 </ng-container>
-
-                <ng-container matColumnDef="ANTICIPO">
-                  <th mat-header-cell *matHeaderCellDef> ANTICIPO PEDIDO </th>
-                  <td mat-cell *matCellDef="let element"> <small>{{element.anticipo| currency: "Q." : fractionsize}}</small> </td>
-                </ng-container>
-
-                <ng-container matColumnDef="SALDO">
-                  <th mat-header-cell *matHeaderCellDef> SALDO PEDIDO</th>
-                  <td mat-cell *matCellDef="let element"> <small><b>{{element.saldo| currency: "Q." : fractionsize}}</b></small> </td>
-                </ng-container>
-
-                <ng-container matColumnDef="ENTREGA">
-                  <th mat-header-cell *matHeaderCellDef> ENTREGA PEDIDO </th>
-                  <td mat-cell *matCellDef="let element"> <small>{{element.direccion_entrega}}</small> </td>
-                </ng-container>
+                
                 <!-- Symbol Column -->
                 <ng-container matColumnDef="OPCIONES">
                   <th mat-header-cell *matHeaderCellDef class="text-success"> OPCIONES </th>
@@ -84,15 +71,9 @@
                       <button mat-raised-button type="button" class="btn btn-primary btn-link" (click)="detPedido(row)"> 
                         <i class="material-icons">list</i>
                     </button>
-                    <button mat-raised-button type="button" class="btn btn-primary btn-link" (click)="getPDF(row)"> 
+                    <!--<button mat-raised-button type="button" class="btn btn-primary btn-link" (click)="getPDF(row)"> 
                       <i class="material-icons">picture_as_pdf</i>
-                  </button>    
-                    <!-- <button mat-button type="button" matTooltip="Quitar denunciante" [matTooltipPosition]="'left'"
-                        class="btn btn-danger" (click)="QuitarContacto(row)">
-                        <i class="material-icons">
-                          delete
-                          </i>
-                      </button> -->
+                  </button>--> 
                     </div>
                   </td>
                 </ng-container>
