--- a/src/app/components/pedido/det-pedido/det-pedido.component.html
+++ b/src/app/components/pedido/det-pedido/det-pedido.component.html
@@ -13,30 +13,36 @@
           <td mat-cell *matCellDef="let element"> {{element.det_pedido}} </td>
         </ng-container>
 
+                <!-- Position Column -->
+        <ng-container matColumnDef="OBSERVACIONES">
+          <th mat-header-cell *matHeaderCellDef> LEYENDA U OBSERVACIONES </th>
+          <td mat-cell *matCellDef="let element"> {{element.observaciones}} </td>
+        </ng-container>
+
         <!-- Name Column -->
         <ng-container matColumnDef="CANTIDAD">
-          <th mat-header-cell *matHeaderCellDef> CANTIDAD </th>
+          <th mat-header-cell *matHeaderCellDef> CANTIDAD PEDIDA</th>
           <td mat-cell *matCellDef="let element"> {{element.cantidad}} </td>
         </ng-container>
 
         
         <!-- Weight Column -->
         <ng-container matColumnDef="PRECIO">
-          <th mat-header-cell *matHeaderCellDef> PRECIO </th>
-          <td mat-cell *matCellDef="let element"> {{element.precio}} </td>
+          <th mat-header-cell *matHeaderCellDef> PRECIO UNITARIO</th>
+          <td mat-cell *matCellDef="let element"> {{element.precio| currency: "Q." : fractionsize}} </td>
         </ng-container>
 
 
         <ng-container matColumnDef="SUBTOTAL">
           <th mat-header-cell *matHeaderCellDef> SUB TOTAL </th>
-          <td mat-cell *matCellDef="let element"> {{element.precio * element.cantidad}} </td>
+          <td mat-cell *matCellDef="let element"> {{(element.precio * element.cantidad)| currency: "Q." : fractionsize}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
       <hr>
-      <p class="lead"><b>El total del pedido es Q. {{totalPedido}}</b></p>
+      <p class="lead"><b>El total del pedido es Q. {{totalPedido| currency: "Q." : fractionsize}}</b></p>
     </div>
   </div>
 </div>
