--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer ">
   <div class="container">
     <nav class="pull-left">
-      <ul>
+      <!--<ul>
         <li>
           <a href="https://www.creative-tim.com">
             Creative Tim
@@ -22,12 +22,11 @@
             Licenses
           </a>
         </li>
-      </ul>
+      </ul>-->
     </nav>
     <div class="copyright pull-right">
-      &copy;
-      {{test | date: 'yyyy'}}, made with <i class="material-icons">favorite</i> by
-      <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
+      {{test | date: 'yyyy'}}, by
+      <a href="https://www.facebook.com/INIT-485478701660361/" target="_blank">initwebapps</a> for a better webapps.
     </div>
   </div>
 </footer>
