--- a/src/app/components/pedido/det-pedido/det-pedido.component.html
+++ b/src/app/components/pedido/det-pedido/det-pedido.component.html
@@ -29,20 +29,20 @@
         <!-- Weight Column -->
         <ng-container matColumnDef="PRECIO">
           <th mat-header-cell *matHeaderCellDef> PRECIO UNITARIO</th>
-          <td mat-cell *matCellDef="let element"> {{element.precio| currency: "Q." : fractionsize}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.precio| currency: "Q."}} </td>
         </ng-container>
 
 
         <ng-container matColumnDef="SUBTOTAL">
           <th mat-header-cell *matHeaderCellDef> SUB TOTAL </th>
-          <td mat-cell *matCellDef="let element"> {{(element.precio * element.cantidad)| currency: "Q." : fractionsize}} </td>
+          <td mat-cell *matCellDef="let element"> {{(element.precio * element.cantidad)| currency: "Q."}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
       <hr>
-      <p class="lead"><b>El total del pedido es Q. {{totalPedido| currency: "Q." : fractionsize}}</b></p>
+      <p class="lead"><b>El total del pedido es Q. {{totalPedido| currency: "Q."}}</b></p>
     </div>
   </div>
 </div>
