--- a/src/app/components/pedido/pedido.component.html
+++ b/src/app/components/pedido/pedido.component.html
@@ -36,44 +36,44 @@
               <mat-form-field>
                 <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
               </mat-form-field>
-
-              <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+ 
+              <table mat-table [dataSource]="dataSource" matSort #sortPedidos="matSort" class="mat-elevation-z8 table table-striped table-no-bordered table-hover">
 
                 <!-- Position Column -->
                 <ng-container matColumnDef="CODIGO">
-                  <th mat-header-cell *matHeaderCellDef> CODIGO PEDIDO</th>
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> CODIGO PEDIDO</th>
                   <td mat-cell *matCellDef="let element"> {{element.id}} </td>
                 </ng-container>
 
                 <!-- Name Column -->
                 <ng-container matColumnDef="FECHA_ENTREGA">
-                  <th mat-header-cell *matHeaderCellDef> FECHA Y HORA DE ENTREGA </th>
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> FECHA Y HORA DE ENTREGA </th>
                   <td mat-cell *matCellDef="let element"> <small>{{element.fecha_entrega}} - {{element.hora_entrega}}</small></td>
                 </ng-container>
 
                 <ng-container matColumnDef="CLIENTE">
-                  <th mat-header-cell *matHeaderCellDef> CLIENTE Y TELEFONO</th>
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> CLIENTE Y TELEFONO</th>
                   <td mat-cell *matCellDef="let element"><small>{{element.nombre_cliente}} - {{element.cliente.telefono}}</small></td>
                 </ng-container>
 
                 <!-- Weight Column -->
                 <ng-container matColumnDef="TOTAL">
-                  <th mat-header-cell *matHeaderCellDef> TOTAL PEDIDO</th>
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> TOTAL PEDIDO</th>
                   <td mat-cell *matCellDef="let element"> <small>{{element.total_pedido| currency: "Q."}}</small></td>
                 </ng-container>
 
                 <ng-container matColumnDef="ANTICIPO">
-                  <th mat-header-cell *matHeaderCellDef> ANTICIPO PEDIDO </th>
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> ANTICIPO PEDIDO </th>
                   <td mat-cell *matCellDef="let element"> <small>{{element.anticipo| currency: "Q."}}</small> </td>
                 </ng-container>
 
                 <ng-container matColumnDef="SALDO">
-                  <th mat-header-cell *matHeaderCellDef> SALDO PEDIDO</th>
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> SALDO PEDIDO</th>
                   <td mat-cell *matCellDef="let element"> <small><b>{{element.saldo| currency: "Q."}}</b></small> </td>
                 </ng-container>
 
                 <ng-container matColumnDef="ENTREGA">
-                  <th mat-header-cell *matHeaderCellDef> ENTREGA PEDIDO </th>
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> ENTREGA PEDIDO </th>
                   <td mat-cell *matCellDef="let element"> <small>{{element.direccion_entrega}}</small> </td>
                 </ng-container>
                 <!-- Symbol Column -->
@@ -96,10 +96,10 @@
                     </div>
                   </td>
                 </ng-container>
-
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
               </table>
+              <mat-paginator #paginatorPedidos [pageSizeOptions]="[5, 10, 25, 100]" showFirstLastButtons></mat-paginator>
             </div>
           </div>
         </div>
